...
        TextButton(
          key: const ValueKey('captureNameCancelButton'),
          onPressed: () => Navigator.of(context).pop(),
          child: Text(widget.l10n.cancel),
        ),
        FilledButton(
          key: const ValueKey('captureNameSaveButton'),
          onPressed: () => Navigator.of(context).pop(_controller.text),
          child: Text(widget.l10n.save),
        ),
      ],
    );
  }
...
